# client-web

./: .dockerignore  .gitignore  .impeccable.md  CLAUDE.md  Dockerfile  README.md  SHARED_TASK_NOTES.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release-desktop.yml  release.yml
.trash/: Callback.tsx
public/: sw.js
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: .tauri-updater.key.pub  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ws/: buffer.rs  connection.rs  events.rs  manager.rs  mod.rs  reconnect.rs
src/components/: ActionCard.tsx  AgentContextViewer.tsx  AvatarUploader.tsx  BottomNav.tsx  ChannelForm.tsx  EmptyState.tsx  ErrorBoundary.tsx  FileGallery.tsx  IOSInstallPrompt.tsx  LoginScreen.tsx  MarkdownRenderer.tsx  MemorySheet.tsx  Nav.tsx  SafeLogtoProvider.tsx  ShareDialog.tsx  TabOverview.tsx  TabSettings.tsx  TabUsers.tsx  UpdateBanner.tsx  UpdateModal.tsx  UserForm.tsx
src/hooks/: useAuth.tsx  useIOSPWA.ts  useNotificationPermission.ts  useNotificationSound.ts  usePWAUpdate.ts  useScrollVisibility.ts  useSwipeBack.ts
src/lib/: utils.ts
src/migrations/: keyspace-migration.ts  lastRead-merge.ts
src/screens/: AgentInbox.tsx  Callback.tsx  ChatList.tsx  ChatList.tsx.bak  ChatRoom.tsx  Dashboard.tsx  Onboarding.tsx  Pairing.tsx  Preferences.tsx  Profile.tsx  Search.tsx
src/services/: agentInbox.ts  clawChannel.ts  connectionStore.ts  messageDB.ts  outbox.ts  suggestions.ts  tauri.ts  volcASR.ts
src/stores/: messageCache.ts  navigationStore.ts  syncStore.ts  threadStore.ts
tests/e2e/: browser-test.mjs  clawline.spec.ts  (+1 more)
(+28 files in other folders)
