[package]
name = "clawline"
version = "0.5.2"
description = "Clawline desktop client"
authors = ["Restry"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "clawline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WebSocket subsystem
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dashmap = "6.1"
url = "2.5"
rand = "0.8"
tracing = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
